--- a/test/fixtures/plural.pot
+++ b/test/fixtures/plural.pot
@@ -2,8 +2,9 @@ msgid ""
 msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Project-Id-Version: \n"
 
-#: partial1.html
+#: partial1.html:1
 msgid "Bird"
 msgid_plural "Birds"
 msgstr[0] ""
